# eng-rec-search

./: .env.template  .gitignore  README.md  databricks.yaml  prompts.yaml  pyproject.toml  tasks.py
.streamlit/: config.toml
data-processing/: pyproject.toml
data-processing/notebooks/: t01_summarize.py  t02_vector_index_creation.py
data-processing/tests/: test_summerize.py
notebooks/: 01 - Eng Rec Summerizer.py  01_eng_rec_summerizer.py  02 - Vector_DB_creation.py  02_vector_index_creation.py  03 - Recommendation Suggester.py  03_recommendation_suggester.py  eng_rec_summariser.py
src/: custom_mocks.py  main.py  styling.py  utils.py
src/eng_rec_search/: __init__.py  constants.py  rec_suggestion.py  vector_search.py
webapp/: README.md  app.yaml  main.py  pyproject.toml  requirements.txt
webapp/scripts/: env_from_app.yaml.py
webapp/src/: custom_mocks.py  rec_suggestion.py  resources.py  styling.py  vector_search.py
