[project]
name = "eng-rec-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.33.0",
    "python-dotenv>=1.0.1",
    "openai>=1.50.2",
    "instructor>=1.5.0",
    "sqlalchemy>=2.0.35",
    "pandas>=2.2.3",
    "streamlit>=1.38.0",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "st-annotated-text>=4.0.1",
    "openpyxl>=3.1.5",
    "rich>=13.8.1",
    "databricks-vectorsearch>=0.40",
    "databricks-sql-connector<=3.4.0",
]

[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
show-fixes = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests|.venv|__ignore__"

[tool.ruff.lint]
select = ["A", "E", "F", "UP", "I", "W", "SIM", "RUF", "C901", ]
ignore = ["A002", "A003", "RUF012", ]
exclude = [".venv", "__ignore__", ]

[tool.pytest.ini_options]
addopts = ["--random-order-seed=0", ]
filterwarnings = ["error", ]

[tool.coverage.run]
source = ["src", ]

[tool.poe.tasks.lint]
help = "Lint"
[[tool.poe.tasks.lint.sequence]]
cmd = "ruff format ."

[[tool.poe.tasks.lint.sequence]]
cmd = "ruff check . --fix"

[[tool.poe.tasks.lint.sequence]]
cmd = "mypy ."

[tool.poe.tasks.lint-check]
help = "Lint Check"
[[tool.poe.tasks.lint-check.sequence]]
cmd = "ruff format . --check"

[[tool.poe.tasks.lint-check.sequence]]
cmd = "ruff check ."

[[tool.poe.tasks.lint-check.sequence]]
cmd = "mypy ."

[tool.poe.tasks.test]
help = "Run unit tests with code coverage"
[[tool.poe.tasks.test.sequence]]
cmd = "coverage run -m pytest ./tests "

[[tool.poe.tasks.test.sequence]]
cmd = "coverage report -m"

[tool.poe.tasks.all]
help = "Run all required pre-push commands"
[[tool.poe.tasks.all.sequence]]
ref = "lint"

[[tool.poe.tasks.all.sequence]]
ref = "test"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "coverage>=7.6.1",
    "pytest-random-order>=1.1.1",
    "tenvplate>=0.0.3",
    "jupyter>=1.1.1",
    "poethepoet>=0.29.0",
    "jupytext>=1.16.4",
    "types-pyyaml>=6.0.12.20240917",
]

